--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^14.2.2",
     "ngx-webstorage": "^9.0.0",
+    "pdf-lib": "^1.17.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
